k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    ports:
        # This is the port other objects in the cluster use to talk to this service
        - port: 3000
          # Spacing is VERY IMPORTANT!
          # Is not a full tab indent, just two spaces
          # This is the port the service is using
          targetPort: 3000
    selector:
        component: web
